# textswap

./: .gitignore  README.md  pyproject.toml
config/: config.toml
src/textswap/: main.py
src/textswap/utils/: cli.py  config.py  file_utils.py  logging_setup.py
